# ai-troubleshooter

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  Makefile  NOTICE  README.md  SECURITY.md  WORKFLOW.md  go.mod
.workflow/: task.schema.json
apps/agent-platform/: README.md  pyproject.toml
apps/agent-platform/agent_platform/: __init__.py  capabilities.py  case_scheduler.py  chat_platform.py  classifier.py  config.py  context_ledger.py  decision_advisor.py  gateway.py  llm.py  local_agents.py  repository.py  server.py  service.py  vision.py
apps/agent-platform/tests/: test_agent_platform_fastapi.py  test_case_scheduler.py  test_classifier.py  test_service_helpers.py  test_vision_provider.py
configs/: business-capabilities.health-food.example.yaml  config.example.yaml  gateway-agents.example.json  mcp-dms-adapter.metadata.example.json  mcp-health-food-adapter.example.json
deploy/: docker-compose.example.yml
docs/: LESSONS.md  VERIFICATION.md  agent-framework-selection.md  ai-connector-integration.md  ai-workflow.md  architecture-decisions.md  business-onboarding-quickstart.md  business-service-registration.md  case-scheduler-design.md  decision-logging-and-limits.md  deployment-checklist.md  dms-mcp-integration.md  gateway-security.md  health-food-production-integration.md  investigation-brief.md  knowledge-evolution.md  local-runbook.md  mcp-gateway-adapter.md  phase1.md  web-workbench.md
githooks/: pre-commit  pre-push
migrations/: 001_initial.sql  002_knowledge_evolution.sql  003_ai_decision_logs.sql  004_case_idempotency.sql  (+4 more)
(+576 files in other folders)
