[project]
name = "ai-troubleshooter-agent-platform"
version = "0.1.0"
description = "Python Agent Platform for ai-troubleshooter"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "PyMySQL>=1.1.1",
  "PyYAML>=6.0.2",
  "cryptography>=42.0.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "../decision-engine"]
